feat: database panache orm config
Signed-off-by: fredsonchaves07 <fredsonchaves07@gmail.com>